# clinical-question-gen

./: README.md  pyproject.toml
src/synthetic_qa/: extract_facts.py  filter_questions.py  format_data.py  generate_questions.py  process_hp.py  run_generate_question_phase1.sh  sample_questions.py  utils.py
src/synthetic_qa/prompts/: extract_facts.py  filter_questions.py  generate_questions.py  process_hp.py  sample_questions.py
