[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]


[project]
name = "synthetic_qa"
version = "0.0.1"

authors = [
  { name="Jordan Cahoon", email="cahoon@stanford.edu" },
]
description = "Generate synthetic question-answer EHR dataset with supporting evidence"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.21.0",
  "matplotlib>=3.5.0",
  "dspy>=2.5.0"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/alsentzerlab/synthetic-qa"
Issues = "https://github.com/alsentzerlab/synthetic-qa/issues"